--- a/templates/notfound404.html
+++ b/templates/notfound404.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ context.title }}</title>
+    <style>{{ context.style }}</style>
 </head>
 <body>
       <h1>{{ context.title }}</h1>
