add base template and include

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ context.title }}</title>
-    <style>{{ context.style }}</style>
-</head>
-<body>
-    <div class="main-menu">
-        <ul>
-            <li><a href="/">Main</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contacts">Contacts</a></li>
-        </ul>
-    </div>
+{% extends 'index.html' %}
 
-    <h1>About us</h1>
-
-    <ul class="about-info">
-        <li class="about-info-item">Address: {{ context.address }}</li>
-        <li class="about-info-item">Tel: {{ context.tel }}</li>
-    </ul>
-</body>
-</html>
+{% block content %}
+<ul class="about-info">
+    <li class="about-info-item">Address: {{ context.address }}</li>
+    <li class="about-info-item">Tel: {{ context.tel }}</li>
+</ul>
+{% endblock %}
